# de-test-task

./: Dockerfile  README.md  docker-compose.yaml  generate_data.py  init.sql  main.py  pyproject.toml
src/db/: engine.py
src/repositories/: events_repository.py  results_repository.py
src/transformers/: coordinates_to_country.py  count_purchases.py
